P1: Finish input subsystem and basic state / UI
- ECMA-48 'compliant' parser 😎
- Handle surrogate pairs 😎
- Handle Control+D on empty line to generate EOF
- Handle Control+C to throw interrupt